# fgcom-mumble-xplane

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
scripts/: deploy_plugin.sh
src/: PracticalSocket.cpp  datarefs.cpp  datarefs.h  fgcom-mumble-plugin.cpp  udpsender.cpp  udpsender.h
test/: test_sockpp_udp.cpp  test_udp.cpp
